<resources>
    <string name="app_name">Covey</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_date">시작 날짜</string>
    <string name="end_date">종료 날짜</string>

    <string name="category_cafe">카페</string>
    <string name="category_restaurant">식당</string>
    <string name="category_25">편의점</string>
    <string name="category_etc">기타</string>

    <string name="cancel">취소</string>
    <string name="set">설정</string>
</resources>

