<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:maxHeight="470dp">
    <data>
        <variable
            name="bottomSheetFilter"
            type="org.yapp.covey.fragment.FilterDialogFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_top_rectangle_15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.734"
        >

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/TextTheme14sp"
            android:text="@string/cancel"
            android:textColor="@color/warm_grey_three"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="@+id/guideline_top" />

        <TextView
            android:id="@+id/tv_filter_title"
            style="@style/TextTheme14sp"
            android:text="보기 설정"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_cancel" />

        <TextView
            android:id="@+id/tv_setting"
            style="@style/TextTheme14sp"
            android:text="@string/set"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_filter_title"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintTop_toTopOf="@+id/tv_filter_title" />

        <TextView
            android:id="@+id/tv_duration"
            style="@style/TextTheme14sp"
            android:text="기간"
            android:layout_marginTop="34dp"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_cancel" />

        <TextView
            android:id="@+id/tv_start_date"
            style="@style/TextThemeRound"
            android:hint="@string/start_date"
            android:layout_marginTop="8dp"
            app:layout_constraintHeight_percent="0.085"
            android:drawableEnd="@drawable/calendar_ic"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/tv_duration"
            app:layout_constraintWidth_percent="0.444" />

        <TextView
            android:id="@+id/tv_end_date"
            style="@style/TextThemeRound"
            android:hint="@string/end_date"
            android:drawableEnd="@drawable/calendar_ic"
            app:layout_constraintBottom_toBottomOf="@+id/tv_start_date"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHeight_percent="0.085"
            app:layout_constraintTop_toTopOf="@+id/tv_start_date"
            app:layout_constraintWidth_percent="0.444" />

        <TextView
            android:id="@+id/tv_payment"
            style="@style/TextTheme14sp"
            android:text="시급"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_date" />

        <EditText
            style="@style/TextThemeRound"
            android:id="@+id/et_payment"
            android:hint="숫자만 입력하세요"
            android:layout_marginTop="8dp"
            app:layout_constraintHeight_percent="0.085"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/tv_payment"
            app:layout_constraintWidth_percent="0.444"
            android:inputType="number" />

        <TextView
            style="@style/TextTheme14sp"
            android:text="원 이상"
            android:textColor="@color/warm_grey_three"
            app:layout_constraintBottom_toBottomOf="@+id/et_payment"
            app:layout_constraintStart_toStartOf="@+id/tv_end_date"
            app:layout_constraintTop_toTopOf="@+id/et_payment" />

        <TextView
            android:id="@+id/tv_location"
            style="@style/TextTheme14sp"
            android:text="위치"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/et_payment" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_city"
            style="@style/TextThemeRound"
            android:layout_marginTop="12dp"
            app:layout_constraintHeight_percent="0.085"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_location"
            app:layout_constraintWidth_percent="0.444" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_rectangle_outline_8dp"
            app:layout_constraintHeight_percent="0.085"
            app:layout_constraintTop_toTopOf="@id/spinner_city"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintWidth_percent="0.444" />

        <TextView
            android:id="@+id/tv_category"
            style="@style/TextTheme14sp"
            android:text="업종"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/spinner_city"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            />

        <RadioGroup
            android:id="@+id/radioGroup_category"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.085"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_category"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right">

            <RadioButton
                android:id="@+id/radio_cafe"
                style="@style/RadioButtonCustom"
                android:text="@string/category_cafe"
                android:button="@null"
                android:background="@drawable/rounded_rectangle_left"
                />

            <RadioButton
                android:id="@+id/radio_25"
                style="@style/RadioButtonCustom"
                android:button="@null"
                android:text="@string/category_25"
                android:background="@drawable/rectangle_outline"
                />

            <RadioButton
                android:id="@+id/radio_rest"
                style="@style/RadioButtonCustom"
                android:button="@null"
                android:text="@string/category_restaurant"
                android:background="@drawable/rectangle_outline"
                />

            <RadioButton
                android:id="@+id/radio_etc"
                style="@style/RadioButtonCustom"
                android:button="@null"
                android:text="@string/category_etc"
                android:background="@drawable/rounded_rectangle_right"
                />
        </RadioGroup>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.956" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.044" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.055" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>